--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -5,16 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: white;
-  font-family: "poppins";
+  font-family: poppins;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
 }
