--- a/Frontend/src/Components/NewCollections/NewCollections.css
+++ b/Frontend/src/Components/NewCollections/NewCollections.css
@@ -3,13 +3,14 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  height: 90vh;
+  margin: 100px 0;
+  padding: 0 50px;
 }
 
 .new-collections h1 {
   color: #171717;
   font-size: 50px;
-  margin-bottom: 600;
+  margin-bottom: 6px;
 }
 
 .new-collections-hr {
@@ -19,7 +20,7 @@
   background: #252525;
 }
 
-.collcetions {
+.collections {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin-top: 50px;
